k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pf-app
  labels:
    app.kubernetes.io/part-of: pf-cloud
    proyecto: pf-cloud
