k8s/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pf-cloud-api
  namespace: pf-app
  labels:
    app.kubernetes.io/name: pf-cloud-api
spec:
  type: ClusterIP                # el acceso externo entra por el Ingress
  selector:
    app.kubernetes.io/name: pf-cloud-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
